--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>intent:</title>
   </head>
   <body>
-    <a href="intent:#Intent;S.webapp_url=https://www.facebook.com/;component=com.android.chrome/com.google.android.apps.chrome.webapps.WebappActivity0;end">Open facebook by Chrome for Android</a>
+    <a href="intent:#Intent;package=com.android.chrome;S.webapp_url=https://www.facebook.com/;component=com.android.chrome/com.google.android.apps.chrome.webapps.WebappActivity0;end">Open facebook by Chrome for Android</a>
   </body>
 </html>
