--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>intent:</title>
     <script type="text/javascript">
       document.getElementById("redirect").addEventListener("click", function(evt) {
+          window.alert("bosukete");
           setTimeout(function() {
-              location.href = "intent:#Intent;S.webapp_url=javascript:alert('Hello chrome');l.webapp_id=1;SEL;component=com.android.chrome/com.google.android.apps.chrome.webapps.WebappActivity0;end";
+              location.href = "intent:#Intent;S.webapp_url=" + encodeURIComponent("http://www.google.com/") + ";l.webapp_id=1;SEL;component=com.android.chrome/com.google.android.apps.chrome.webapps.WebappActivity0;end";
           }, 1500);
       }, false);
     </script>
