--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>intent:</title>
+  </head>
+  <body>
+    <p><a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.google.android;end">Open facebook by Chrome for Android</a></p>
+    <p><a href="javascript:void(0);" id="redirect">test</a></p>
     <script type="text/javascript">
       document.getElementById("redirect").addEventListener("click", function(evt) {
           window.alert("bosukete");
@@ -10,9 +14,5 @@
           }, 1500);
       }, false);
     </script>
-  </head>
-  <body>
-    <a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.google.android;end">Open facebook by Chrome for Android</a>
-    <a href="javascript:void(0);" id="redirect">test</a>
   </body>
 </html>
