--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <title>intent:</title>
   </head>
   <body>
-    <p><a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.google.android;end">Open facebook by Chrome for Android</a></p>
+    <p><a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.android.chrome;end">Open facebook by Chrome for Android</a></p>
     <p><a href="javascript:void(0);" id="redirect">test</a></p>
     <script type="text/javascript">
       document.getElementById("redirect").addEventListener("click", function(evt) {
-          window.alert("bosukete");
           setTimeout(function() {
               location.href = "intent:#Intent;S.webapp_url=" + encodeURIComponent("http://www.google.com/") + ";l.webapp_id=1;SEL;component=com.android.chrome/com.google.android.apps.chrome.webapps.WebappActivity0;end";
           }, 1500);
