--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>intent:</title>
   </head>
   <body>
-    <p><a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.android.chrome;SEL;l.webapp_id=0;S.webapp_url=https%3A%2F%2Fwww.facebook.com%2F;end">Open facebook by Chrome for Android</a></p>
+    <p><a href="intent:#Intent;scheme=http;action=android.intent.action.VIEW;category=android.intent.category.BROWSABLE;package=com.android.chrome;SEL;S.webapp_url=https%3A%2F%2Fwww.facebook.com%2F;end">Open facebook by Chrome for Android</a></p>
     <p><a href="javascript:void(0);" id="redirect">test</a></p>
     <script type="text/javascript">
       document.getElementById("redirect").addEventListener("click", function(evt) {
